# Stem-Toyota-Challenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: sample_competition_robot.json
docs/: architecture_overview.md
examples/: run_scenarios.cpp
include/: config_loader.hpp  control_primitives.hpp  core_types.hpp  csv_logger.hpp  drivetrain_model.hpp  math_utils.hpp  random_utils.hpp  robot_controllers.hpp  robot_sim.hpp  scenario_framework.hpp  sensor_simulator.hpp  simulation_modules.hpp  simulator.hpp
src/: config_loader.cpp  control_primitives.cpp  csv_logger.cpp  drivetrain_model.cpp  math_utils.cpp  random_utils.cpp  robot_controllers.cpp  scenario_framework.cpp  sensor_simulator.cpp  simulation_modules.cpp  simulator.cpp
tests/: CMakeLists.txt  test_drivetrain.cpp
